# snyk-issues-to-csv

./: .gitignore  Dockerfile  Makefile  README.md  auto_join_csv.py  join_csv.py  make_issues_csvs.py  pyproject.toml
output/2021-05-17/group-dcf9cae3-2f54-4ad2-98af-e70b844657f3/: combined.csv
output/2021-05-17/group-dcf9cae3-2f54-4ad2-98af-e70b844657f3/org-1b48e2c4-6ca8-455f-a73f-d2f6f2a6b225/: 2e291a40-e38a-4e48-af50-ebaeb9e53b62.csv  2f9774b0-ae8e-4b9c-905d-2bf50ab22055.csv  3d7ab2e3-79a0-48d4-8f1f-19892839fe49.csv
output/2021-05-17/group-dcf9cae3-2f54-4ad2-98af-e70b844657f3/org-2bcac16c-650a-406a-b2b2-5c723fbd5593/: 0a9f09b6-86db-48e3-a2ce-a6c8a092e749.csv  a427384b-81f1-4191-ac94-5a26b971da96.csv
